--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -16,6 +16,52 @@
 </head>
 
 <body>
+    <div>
+        <a href="https://github.com/iamnihal/encodecode" class="github-corner" aria-label="View source on GitHub"><svg
+                width="80" height="80" viewBox="0 0 250 250"
+                style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
+                <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
+                <path
+                    d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2"
+                    fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
+                <path
+                    d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z"
+                    fill="currentColor" class="octo-body"></path>
+            </svg></a>
+        <style>
+            .github-corner:hover .octo-arm {
+                animation: octocat-wave 560ms ease-in-out
+            }
+
+            @keyframes octocat-wave {
+
+                0%,
+                100% {
+                    transform: rotate(0)
+                }
+
+                20%,
+                60% {
+                    transform: rotate(-25deg)
+                }
+
+                40%,
+                80% {
+                    transform: rotate(10deg)
+                }
+            }
+
+            @media (max-width:500px) {
+                .github-corner:hover .octo-arm {
+                    animation: none
+                }
+
+                .github-corner .octo-arm {
+                    animation: octocat-wave 560ms ease-in-out
+                }
+            }
+        </style>
+    </div>
     <div class="container my-5">
         <h5>URL Encode</h4>
             <div class="row">
@@ -31,7 +77,8 @@
                 <div class="col">
                     <div class="col">
                         <div class="input-group input-group-lg">
-                            <textarea class="form-control" aria-label="With textarea" id="output_urlencode" rows="6"></textarea>
+                            <textarea class="form-control" aria-label="With textarea" id="output_urlencode"
+                                rows="6"></textarea>
                         </div>
                     </div>
                 </div>
@@ -49,7 +96,8 @@
                 </div>
                 <div class="col">
                     <div class="input-group input-group-lg">
-                        <textarea class="form-control" aria-label="With textarea" id="output_urldecode" rows="6"></textarea>
+                        <textarea class="form-control" aria-label="With textarea" id="output_urldecode"
+                            rows="6"></textarea>
                     </div>
                 </div>
             </div>
@@ -66,7 +114,8 @@
                 </div>
                 <div class="col">
                     <div class="input-group input-group-lg">
-                        <textarea class="form-control" aria-label="With textarea" id="output_base64encode" rows="6"></textarea>
+                        <textarea class="form-control" aria-label="With textarea" id="output_base64encode"
+                            rows="6"></textarea>
                     </div>
                 </div>
             </div>
@@ -83,7 +132,8 @@
                 </div>
                 <div class="col">
                     <div class="input-group input-group-lg">
-                        <textarea class="form-control" aria-label="With textarea" id="output_base64decode" rows="6"></textarea>
+                        <textarea class="form-control" aria-label="With textarea" id="output_base64decode"
+                            rows="6"></textarea>
                     </div>
                 </div>
             </div>
@@ -100,7 +150,8 @@
                 </div>
                 <div class="col">
                     <div class="input-group input-group-lg">
-                        <textarea class="form-control" aria-label="With textarea" id="output_htmlencode" rows="6"></textarea>
+                        <textarea class="form-control" aria-label="With textarea" id="output_htmlencode"
+                            rows="6"></textarea>
                     </div>
                 </div>
             </div>
@@ -117,7 +168,8 @@
                 </div>
                 <div class="col">
                     <div class="input-group input-group-lg">
-                        <textarea class="form-control" aria-label="With textarea" id="output_htmldecode" rows="6"></textarea>
+                        <textarea class="form-control" aria-label="With textarea" id="output_htmldecode"
+                            rows="6"></textarea>
                     </div>
                 </div>
             </div>
@@ -134,7 +186,8 @@
                 </div>
                 <div class="col">
                     <div class="input-group input-group-lg">
-                        <textarea class="form-control" aria-label="With textarea" id="output_md5generate" rows="6"></textarea>
+                        <textarea class="form-control" aria-label="With textarea" id="output_md5generate"
+                            rows="6"></textarea>
                     </div>
                 </div>
             </div>
@@ -151,7 +204,8 @@
                 </div>
                 <div class="col">
                     <div class="input-group input-group-lg">
-                        <textarea class="form-control" aria-label="With textarea" id="output_md5decrypt" rows="6"></textarea>
+                        <textarea class="form-control" aria-label="With textarea" id="output_md5decrypt"
+                            rows="6"></textarea>
                     </div>
                 </div>
             </div>
@@ -168,7 +222,8 @@
                 </div>
                 <div class="col">
                     <div class="input-group input-group-lg">
-                        <textarea class="form-control" aria-label="With textarea" id="output_sha1generate" rows="6"></textarea>
+                        <textarea class="form-control" aria-label="With textarea" id="output_sha1generate"
+                            rows="6"></textarea>
                     </div>
                 </div>
             </div>
@@ -185,7 +240,8 @@
                 </div>
                 <div class="col">
                     <div class="input-group input-group-lg">
-                        <textarea class="form-control" aria-label="With textarea" id="output_sha256generate" rows="6"></textarea>
+                        <textarea class="form-control" aria-label="With textarea" id="output_sha256generate"
+                            rows="6"></textarea>
                     </div>
                 </div>
             </div>
@@ -202,7 +258,8 @@
                 </div>
                 <div class="col">
                     <div class="input-group input-group-lg">
-                        <textarea class="form-control" aria-label="With textarea" id="output_sha512generate" rows="6"></textarea>
+                        <textarea class="form-control" aria-label="With textarea" id="output_sha512generate"
+                            rows="6"></textarea>
                     </div>
                 </div>
             </div>
@@ -212,8 +269,8 @@
                     <form method="POST" action=".">
                         {% csrf_token %}
                         <div class="input-group input-group-lg">
-                            <textarea class="form-control" aria-label="With textarea" name="json"
-                                id="input_json" rows="6"></textarea>
+                            <textarea class="form-control" aria-label="With textarea" name="json" id="input_json"
+                                rows="6"></textarea>
                         </div>
                     </form>
                 </div>
@@ -229,14 +286,15 @@
                     <form method="POST" action=".">
                         {% csrf_token %}
                         <div class="input-group input-group-lg">
-                            <textarea class="form-control" placeholder="Enter URL" aria-label="With textarea" name="sha512generate"
-                                id="input_cspurl" rows="6"></textarea>
+                            <textarea class="form-control" placeholder="Enter URL" aria-label="With textarea"
+                                name="sha512generate" id="input_cspurl" rows="6"></textarea>
                         </div>
                     </form>
                 </div>
                 <div class="col">
                     <div class="input-group input-group-lg">
-                        <textarea class="form-control" aria-label="With textarea" id="output_cspvalue" rows="6"></textarea>
+                        <textarea class="form-control" aria-label="With textarea" id="output_cspvalue"
+                            rows="6"></textarea>
                     </div>
                 </div>
             </div>
@@ -259,7 +317,6 @@
                         $('#output_urlencode').text(json)
                     }
                 });
-                return false; //<---- move it here
             });
         });
 
@@ -279,7 +336,6 @@
                         $('#output_urldecode').text(json)
                     }
                 });
-                return false; //<---- move it here
             });
         });
 
@@ -299,7 +355,6 @@
                         $('#output_base64encode').text(json)
                     }
                 });
-                return false; //<---- move it here
             });
         });
 
@@ -319,7 +374,6 @@
                         $('#output_base64decode').text(json)
                     }
                 });
-                return false; //<---- move it here
             });
         });
 
@@ -339,7 +393,6 @@
                         $('#output_htmlencode').text(json)
                     }
                 });
-                return false; //<---- move it here
             });
         });
 
@@ -359,7 +412,6 @@
                         $('#output_htmldecode').text(json)
                     }
                 });
-                return false; //<---- move it here
             });
         });
 
@@ -379,7 +431,6 @@
                         $('#output_md5generate').text(json)
                     }
                 });
-                return false; //<---- move it here
             });
         });
 
@@ -400,7 +451,6 @@
                         $('#output_md5decrypt').text(json)
                     }
                 });
-                // return false; //<---- move it here
             });
         });
 
@@ -420,7 +470,6 @@
                         $('#output_json').text(json)
                     }
                 });
-                // return false; //<---- move it here
             });
         });
 
@@ -440,7 +489,6 @@
                         $('#output_sha1generate').text(json)
                     }
                 });
-                return false; //<---- move it here
             });
         });
 
@@ -460,7 +508,6 @@
                         $('#output_sha256generate').text(json)
                     }
                 });
-                return false; //<---- move it here
             });
         });
 
@@ -480,7 +527,6 @@
                         $('#output_sha512generate').text(json)
                     }
                 });
-                return false; //<---- move it here
             });
         });
 
@@ -500,7 +546,6 @@
                         $('#output_cspvalue').text(json)
                     }
                 });
-                return false; //<---- move it here
             });
         });
     </script>
@@ -515,5 +560,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
     -->
 </body>
-
 </html>
