--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -5,8 +5,9 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
-
+    <meta name="keywords" content="encode, decode, md5, hash, sha-256, csp, security, django, github">
+    <meta name="description" content="Encoder-Decoder is small web utility tool to Encode/Decode URL, Bas64, HTML Entities, MD5, etc." />
+    <meta name="author" content="Nihal" />
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
